# NamahskaLauncher-v2

./: package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.py  main.rs
src-tauri/src/commands/: files.rs  mod.rs  pack.rs  packs.rs  user.rs  utils.rs
src-tauri/src/file_utils/: client.rs  mod.rs
src-tauri/src/google_drive/: client.rs  mod.rs
src-tauri/src/modpack_processor/: client.rs  commands.rs
src/components/: ContentBody.svelte  FilesSection.svelte  PackDetails.svelte  PackTabs.svelte  SideBar.svelte  TopBar.svelte
src/lib/components/: ContentBody.svelte  FilesSection.svelte  PackDetails.svelte  PackTabs.svelte  SideBar.svelte  TopBar.svelte
src/routes/: +layout.ts  +page.svelte
src/routes/about/: +page.svelte
src/routes/main/: +page.svelte
